feat(deploy): docker compose prod + GH Actions

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,10 @@
-# Web
+# Web (Next.js)
+# - API_BASE_URL: for Server Components (Node-side fetch)
+# - NEXT_PUBLIC_API_BASE_URL: for Client Components (browser fetch)
+#
+# In production Docker (same-origin /api reverse proxy), you can omit
+# NEXT_PUBLIC_API_BASE_URL and the browser will use "/api" automatically.
+API_BASE_URL=http://localhost:4000
 NEXT_PUBLIC_API_BASE_URL=http://localhost:4000
 
 # API
