--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/worker.ts",
+    "start": "tsx src/worker.ts",
     "typecheck": "tsc -p tsconfig.json --noEmit"
   },
   "dependencies": {
